[gd_scene load_steps=5 format=2]

[ext_resource path="res://ent_door.tscn" type="PackedScene" id=1]
[ext_resource path="res://materials/dev/M_Dark.tres" type="Material" id=2]
[ext_resource path="res://maps/ent_moving_platform.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]

[node name="ent_moving_platform" type="Spatial"]
script = ExtResource( 3 )

[node name="CSGBox2" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.997946, 0.229237, 0 )
use_collision = true
width = 0.002
height = 2.53174
depth = 2.02818
material = ExtResource( 2 )

[node name="CSGBox4" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.935901, 0.248783, 0 )
use_collision = true
width = 0.002
height = 2.52093
depth = 2.02818
material = ExtResource( 2 )

[node name="CSGBox5" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00956416, 0.260495, -0.985697 )
use_collision = true
width = 1.93196
height = 2.55262
depth = 0.002
material = ExtResource( 2 )

[node name="CSGBox7" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00956416, 1.20467, 0.998523 )
use_collision = true
width = 1.93196
height = 0.662751
depth = 0.002
material = ExtResource( 2 )

[node name="CSGBox8" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00956416, 1.20467, -0.957785 )
visible = false
use_collision = true
width = 1.93196
height = 0.662751
depth = 0.002
material = ExtResource( 2 )

[node name="CSGBox3" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0272444, -1.0637, 0 )
use_collision = true
width = 1.99585
height = 0.002
depth = 2.02818
material = ExtResource( 2 )

[node name="CSGBox6" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0272444, 1.52632, 0 )
use_collision = true
width = 1.99585
height = 0.002
depth = 2.02818
material = ExtResource( 2 )

[node name="ent_door" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0862038, 0.986599 )

[node name="ent_door2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0862038, -1.03667 )
visible = false

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
